--- a/templates/___toast.html
+++ b/templates/___toast.html
@@ -1,3 +1,3 @@
-<div class="mx-auto bg-c-red:+5 text-c-white border-1 border-c-red px-8 py-4 rounded-md" mix-ttl="4000">
+<div class="mx-auto bg-red-500 text-white px-8 py-4 rounded-md" mix-ttl="4000">
     {{ message }}
 </div>
