--- a/templates/__header_partner.html
+++ b/templates/__header_partner.html
@@ -1,26 +1,29 @@
-  <button><a href="{{ url_for('view_edit_profile')}}">Edit profile</a></button>
-</div>
-<div>
-  <div class="relative dropdown-container">
-    <button class="flex items-center gap-2 p-1 rounded-full hover:bg-gray-300 bg-gray-200 w-20" id="dropdown-btn">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-        </svg>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-          <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-        </svg>
-    </button>
-
-    <div id="dropdown-menu" class="absolute right-0 hidden mt-1 bg-white rounded-md shadow-lg w-48 z-50">
-        <form method="POST" action="{{url_for('logout')}}" class="">
-            <button class="w-full text-left hover:bg-gray-200 p-2 rounded-md">Logout</button>
-        </form>
-        <a href="{{ url_for('view_edit_profile') }}" class="w-full text-left hover:bg-gray-200 p-2 rounded-md block">Edit profile</a>
+<div class="flex w-full py-5 justify-between border-b border-gray-100">
+  <div class="pl-20">
+    <a class="text-3xl font-semibold" href="/{{ user.roles[0] }}">Wolt</a>
+  </div>
+  <div class="flex gap-3 w-1/3 justify-end pr-20">
+    <div class="relative dropdown-container">
+        <button class="flex items-center gap-2 p-1 rounded-full hover:bg-gray-300 bg-gray-200 w-20" id="dropdown-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+            </svg>
+        </button>
+  
+        <div id="dropdown-menu" class="absolute right-0 hidden mt-1 bg-white rounded-md shadow-lg w-48 z-50">
+            <form method="POST" action="{{url_for('logout')}}" class="">
+                <button class="w-full text-left hover:bg-gray-200 p-2 rounded-md">Logout</button>
+            </form>
+            <a href="{{ url_for('view_edit_profile') }}" class="w-full text-left hover:bg-gray-200 p-2 rounded-md block">Edit profile</a>
+        </div>
     </div>
-</div>
-  <button>
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-    </svg>
-  </button>
+    <button class="flex justify-center items-center rounded-full p-1  hover:bg-gray-300 bg-gray-200 size-10">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+      </svg>
+    </button>
+  </div>
 </div>
