--- a/templates/_top_logged.html
+++ b/templates/_top_logged.html
@@ -13,15 +13,13 @@
     <body class="w-full h-screen text-gray-950">
         <div id="toast" class="flex flex-col justify-center fixed w-full top-4 z-10"></div>
         <header class="">
-            <!-- Dropdown container -->
             {% if 'restaurant' in user.roles %}
-                {% include "__header_customer.html"%}
+                {% include "__header_restaurant.html"%}
             {% elif 'customer' in user.roles %}
                 {% include "__header_customer.html"%}
             {% elif 'partner' in user.roles %}
                 {% include "__header_partner.html"%}
             {% endif %}
-        
         </header>
         <div class="px-20">
         
