--- a/templates/view_login.html
+++ b/templates/view_login.html
@@ -1,28 +1,46 @@
 {% include "_top.html" %}
 
-<main class="w-full h-100vh d-flex p-items-center">
-    <form id="frm_user_login" class="w-25% d-flex flex-col gap-4 mx-auto">
-        <div class="text-c-green text-200">{{ message }}</div>
-
-        <div class="d-flex flex-col">
-            <label for="user_email">
-                <span>Email</span>
+<main class="w-full h-screen flex items-center">
+    <form id="frm_user_login" class="w-full max-w-sm flex flex-col gap-6 mx-auto p-8 shadow-lg rounded-md">
+        <div class="text-green-500">{{ message }}</div>
+        <div>
+            <h1 class="text-xl font-bold pb-3">Create an account or log in</h1>
+            <p class="text-sm font-light text-gray-700">Log in below or create a new Wolt account.</p>
+        </div>
+        <div class="flex flex-col">
+            <label for="user_email" class="text-sm text-gray-600 mb-1">
+                Email
             </label>
-            <input name="user_email" type="text" mix-check="{{ x.EMAIL_REGEX }}" />
+            <input
+                name="user_email"
+                type="text"
+                mix-check="{{ x.EMAIL_REGEX }}"/>
         </div>
 
-        <div class="d-flex flex-col">
-            <label for="user_password" class="d-flex">
+        <div class="flex flex-col">
+            <label for="user_password" class="flex items-center text-sm text-gray-600 mb-1">
                 <span>Password</span>
-                <span class="ml-auto text-c-gray:+25">{{ x.PASSWORD_MIN }} to {{ x.PASSWORD_MAX }} chars</span>
+                <span class="ml-auto text-gray-400 text-xs">{{ x.PASSWORD_MIN }} to {{ x.PASSWORD_MAX }} chars</span>
             </label>
-            <input name="user_password" type="text" mix-check="{{ x.PASSWORD_REGEX }}" />
+            <input
+                name="user_password"
+                type="text"
+                mix-check="{{ x.PASSWORD_REGEX }}"/>
         </div>
 
-        <button mix-post="/login" mix-data="#frm_user_login" class="cursor-pointer">Login</button>
+        <button
+            mix-post="/login"
+            mix-data="#frm_user_login"
+            class="bg-blue-500 text-white font-medium py-2 px-4 rounded-md hover:bg-blue-600 transition duration-200">
+            Login
+        </button>
 
-        <a href="{{url_for('view_forgot_password')}}" class="text-a-center">Forgot password?</a>
-        <a href="{{url_for('view_signup')}}" class="text-a-center">Signup</a>
+        <a href="{{ url_for('view_forgot_password') }}" class="text-center text-blue-500 hover:text-blue-600 transition duration-200">
+            Forgot password?
+        </a>
+        <a href="{{ url_for('view_signup') }}" class="text-center text-blue-500 hover:text-blue-600 transition duration-200">
+            Signup
+        </a>
     </form>
 </main>
 
