--- a/templates/___toast.html
+++ b/templates/___toast.html
@@ -1,3 +1,3 @@
-<div class="mx-auto bg-red-500 text-white px-8 py-4 rounded-md" mix-ttl="4000">
+<div class="mx-auto bg-red-500 text-white px-8 py-4 rounded-md z-50" mix-ttl="4000">
     {{ message }}
 </div>
