--- a/templates/__header_customer.html
+++ b/templates/__header_customer.html
@@ -8,7 +8,7 @@
     </div>
     
     <div class="w-1/3 justify-items-center">
-        <form id="search_frm" method="GET" action="/search" class="z-10 relative w-fit">
+        <form id="search_frm" method="GET" action="/search" class="relative w-fit">
             <input id="search_field" type="text" name="search_field" placeholder="Search in Wolt..." class="border-none placeholder:text-sm capitalize rounded-full bg-gray-200 h-10 pl-10"/>
             <button type="submit" class="absolute left-3 top-3">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-4">
