--- a/templates/_top.html
+++ b/templates/_top.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='mixhtml.css') }}">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link href="/static/output.css" rel="stylesheet">
+    <script src="/static/ui.js" type="module"></script>
     <title>
         {{ title or "Company" }}
     </title>
 </head>
 <body class="w-full h-100vh text-c-gray:-16">
 
-    <div id="toast" class="d-flex flex-col j-content-center p-fixed w-full top-4 z-10"></div>
+    <div id="toast" class="flex flex-col justify-center fixed w-full top-4 z-10"></div>
     <div>
