--- a/templates/___btn_block.html
+++ b/templates/___btn_block.html
@@ -1,7 +1,7 @@
 <td class="w-50">
     <form id="block-user-{{ account_pk }}">
         <button
-            class="cursor-pointer"
+            class="bg-red-500 text-white py-1 px-3 rounded hover:bg-red-600 transition"
             mix-put="/users/block/{{ account_pk }}"
             mix-data="#block-user-{{ account_pk }}"
             mix-target="#block-user-{{ account_pk }}">
