--- a/templates/view_admin.html
+++ b/templates/view_admin.html
@@ -1,10 +1,8 @@
 {% include "_top_logged.html" %}
 
 <main class="w-full pt-5">
-    <button><a href="{{url_for('view_admin_users')}}">See all users</a></button>
     <div class="w-full h-100vh">
-        <h1>Admin</h1>
-        {{ user }}
+        <h1 class="text-3xl">Admin</h1>
     </div>
 </main>
 
