--- a/templates/___deleted_at.html
+++ b/templates/___deleted_at.html
@@ -1,3 +1,3 @@
 <td>
-    <div class="d-flex a-items-center">{{ account_deleted_at }}</div>
+    <div class="d-flex a-items-center">{{ deleted_at }}</div>
 </td>
