--- a/templates/view_edit_profile.html
+++ b/templates/view_edit_profile.html
@@ -44,6 +44,9 @@
             Save
         </button>
     </form>
+    <form action="">
+        
+    </form>
 </main>
 
 {% include "_bottom.html" %}
