--- a/templates/view_edit_profile.html
+++ b/templates/view_edit_profile.html
@@ -44,9 +44,23 @@
             Save
         </button>
     </form>
-    <form action="">
-        
-    </form>
+    <button  id="open-delete-modal-btn" class="bg-red-500 mt-20 text-white py-2 px-4 rounded-lg hover:bg-red-600 transition-colors duration-200 ease-in-out">
+        Delete account
+    </button>
+    <div id="delete-modal" class="fixed inset-0 bg-black bg-opacity-50 justify-center items-center hidden">
+        <div class="bg-white p-8 rounded-lg shadow-lg w-96">
+            <p class="text-2xl font-semibold mb-4">Are you sure you want to delete your account?</p>
+            <p class="text-sm mb-8">This action cannot be reversed</p>
+            <div class="flex gap-3">
+                <button id="confirm-delete-btn" mix-delete="/users/delete/{{ user.account_pk }}" class="bg-red-500 w-1/2 text-white py-2 px-4 rounded-lg hover:bg-red-600 transition-colors duration-200 ease-in-out">
+                    Delete
+                </button>
+                <button id="cancel-delete-btn" class="bg-gray-200 w-1/2 text-gray-800 py-2 px-4 rounded-lg hover:bg-gray-300 transition-colors duration-200 ease-in-out">
+                    Cancel
+                </button>            
+            </div>
+        </div>
+    </div>
 </main>
 
 {% include "_bottom.html" %}
