--- a/templates/view_edit_restaurant_profile.html
+++ b/templates/view_edit_restaurant_profile.html
@@ -33,21 +33,28 @@
             Save
         </button>
     </form>
-    <button  id="open-delete-modal-btn" class="bg-red-500 mt-20 text-white py-2 px-4 rounded-lg hover:bg-red-600 transition-colors duration-200 ease-in-out">
+    <button class="open-delete-modal-btn bg-red-500 mt-20 text-white py-2 px-4 rounded-lg hover:bg-red-600 transition-colors duration-200 ease-in-out">
         Delete account
     </button>
-    <div id="delete-modal" class="fixed inset-0 bg-black bg-opacity-50 justify-center items-center hidden">
+    <div class="delete-modal fixed inset-0 bg-black bg-opacity-50 justify-center items-center hidden">
         <div class="bg-white p-8 rounded-lg shadow-lg w-96">
-            <p class="text-2xl font-semibold mb-4">Are you sure you want to delete your account?</p>
-            <p class="text-sm mb-8">This action cannot be reversed</p>
-            <div class="flex gap-3">
-                <button id="confirm-delete-btn" mix-delete="/users/delete/{{ user.account_pk }}" class="bg-red-500 w-1/2 text-white py-2 px-4 rounded-lg hover:bg-red-600 transition-colors duration-200 ease-in-out">
-                    Delete
-                </button>
-                <button id="cancel-delete-btn" class="bg-gray-200 w-1/2 text-gray-800 py-2 px-4 rounded-lg hover:bg-gray-300 transition-colors duration-200 ease-in-out">
-                    Cancel
-                </button>            
-            </div>
+            <form>
+                <p class="text-2xl font-semibold mb-4">Are you sure you want to delete your account?</p>
+                <p class="text-sm mb-8">This action cannot be reversed</p>
+                <div class="flex flex-col mb-5">
+                    <label class="text-sm  text-gray-500 mb-1" for="delete-password-input">Password</label>
+                    <input type="password" class="delete-password-input" />
+                </div>
+    
+                <div class="flex gap-3">
+                    <button class="confirm-delete-btn bg-red-500 w-1/2 text-white py-2 px-4 rounded-lg hover:bg-red-600 transition-colors duration-200 ease-in-out" mix-delete="/users/delete/{{ user.account_pk }}">
+                        Delete
+                    </button>
+                    <button class="cancel-delete-btn bg-gray-200 w-1/2 text-gray-800 py-2 px-4 rounded-lg hover:bg-gray-300 transition-colors duration-200 ease-in-out">
+                        Cancel
+                    </button>            
+                </div>
+            </form>
         </div>
     </div>
 </main>
