--- a/styles/input.css
+++ b/styles/input.css
@@ -6,7 +6,7 @@
   .btn-primary {
     @apply py-2 px-5 bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75;
   }
-  input, select {
+  input, select, textarea {
     @apply border-2 border-gray-200 p-2 rounded-md
   }
 }
