--- a/templates/view_create_item.html
+++ b/templates/view_create_item.html
@@ -1,22 +1,20 @@
 {% include "_top_logged.html" %}
+<main class="w-full mt-10">
+    <h1 class="text-3xl font-bold pb-10">Create item</h1>
 
-<main class="w-full">
-    <h1>Create item</h1>
-
-    <form nctype="multipart/form-data" id="frm_create_item" class="w-25% d-flex flex-col gap-4 mx-auto p-self-center">
-        <div class="d-flex flex-col">
+    <form enctype="multipart/form-data" id="frm_create_item" class="pt-6 w-full max-w-md flex flex-col gap-6 mx-auto shadow-lg p-10 rounded-md mt-8">
+        <div class="flex flex-col">
             <label for="item_title">
                 <span>Title</span>
             </label>
             <input id="item_title" name="item_title" type="text" mix-check="{{ x.NAME_REGEX }}" />
         </div>
 
-        <div class="d-flex flex-col">
+        <div class="flex flex-col">
             <label for="item_description">
                 <span>Description</span>
             </label>
             <textarea
-                class="outline-1 rounded-sm pa-3"
                 id="item_description"
                 name="item_description"
                 rows="4"
@@ -24,14 +22,14 @@
                 mix-check="{{ x.DESCRIPTION_REGEX }}"></textarea>
         </div>
 
-        <div class="d-flex flex-col">
+        <div class="flex flex-col">
             <label for="item_price">
                 <span>Price</span>
             </label>
             <input type="number" name="item_price" id="item_price" mix-check="{{ x.PRICE_REGEX }}" />
         </div>
 
-        <div class="d-flex flex-col">
+        <div class="flex flex-col">
             <label for="item_image_name">
                 <span>Image</span>
             </label>
@@ -45,9 +43,11 @@
             <pre id="fileList"></pre>
         </div>
 
-        <button type="submit" class="cursor-pointer" mix-post="/items" mix-data="#frm_create_item">Create item</button>
+        <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded-md cursor-pointer hover:bg-blue-600" mix-post="/items" mix-data="#frm_create_item">Create item</button>
     </form>
 </main>
+
+
 
 <script src="{{ url_for('static', filename='file_list.js') }}" type="module"></script>
 
