--- a/templates/view_all_items.html
+++ b/templates/view_all_items.html
@@ -25,5 +25,10 @@
         </div>
     </div>
 </main>
+        <!-- <button class="px-20 py-4 rounded-sm"
+            mix-get="/items/page/1"
+        >
+            More
+        </button> -->
 
 {% include "_bottom.html" %}
