--- a/templates/view_customer.html
+++ b/templates/view_customer.html
@@ -28,7 +28,13 @@
 
     // Dynamic marker locations passed from the backend
     fetch('/map-locations')
-        .then(response => response.json())  // Parse JSON response
+        .then(response => {
+            // Ensure the response is successful
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json();  // Parse JSON response
+        })
         .then(markerLocations => {
             // Loop through the markerLocations array and add markers to the map
             markerLocations.forEach(function(location) {
@@ -44,8 +50,6 @@
         .catch(error => {
             console.error('Error fetching marker locations:', error);
         });
-
-    setTimeout(test, 3000)
     
 </script>
 
