--- a/templates/_top_logged.html
+++ b/templates/_top_logged.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="{{ url_for('static', filename='mixhtml.css') }}" />
         <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css" />
+        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css" />
         <link href="/static/output.css" rel="stylesheet">
         <script src="/static/ui.js" type="module"></script>
         <title>{{ title or "Company" }}</title>
