--- a/templates/view_customer.html
+++ b/templates/view_customer.html
@@ -10,49 +10,5 @@
 </main>
 
 </div>
-<script src="{{url_for('static', filename='app.js')}}"></script>
-<script src="{{url_for('static', filename='mixhtml.js')}}"></script>
 
-
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script>
-
-    // Initialize the map
-    var map = L.map('map').setView([55.6845, 12.564148], 12);
-
-    // Add OpenStreetMap tile layer
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        maxZoom: 20,
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
-
-    // Dynamic marker locations passed from the backend
-    fetch('/map-locations')
-        .then(response => {
-            // Ensure the response is successful
-            if (!response.ok) {
-                throw new Error('Network response was not ok');
-            }
-            return response.json();  // Parse JSON response
-        })
-        .then(markerLocations => {
-            // Loop through the markerLocations array and add markers to the map
-            markerLocations.forEach(function(location) {
-                // Only add marker if coordinates are valid
-                if (location.coords[0] !== null && location.coords[1] !== null) {
-                    var marker = L.marker(location.coords).addTo(map);
-                    marker.bindPopup(location.popup);
-                } else {
-                    console.log("Geocoding failed for:", location.popup);
-                }
-            });
-        })
-        .catch(error => {
-            console.error('Error fetching marker locations:', error);
-        });
-    
-</script>
-
-</body>
-
-</html>
+{% include "_bottom_map.html" %}
